--- a/Assets/StreamingAssets/Settings.json
+++ b/Assets/StreamingAssets/Settings.json
@@ -1,84 +1,128 @@
 {
-    "levels": [
+  "levels": [
+    {
+      "Mechanics": {
+        "AvoidingUnkillableObjects": true,
+        "InstantDeath": false,
+        "GameRepeatsUntilYouDie": false,
+        "RememberAnIncreasingNumberOfThings": false,
+        "RepeatPattern": false,
+        "ForcedConstantMovement": false,
+        "BlockPuzzles": false,
+        "GameKeepsGetsHarderUntilYouDie": false,
+        "UncountableNumberOfPossiblePaths": false,
+        "BlockPath": false,
+        "InformationOverload": false,
+        "SwitchModes": false,
+        "PushMoleDownMolePopsUp": false,
+        "BouncingObject": false,
+        "Gravity": false,
+        "SpinningPlates": false,
+        "Teleports": false,
+        "Squad": false,
+        "ScarceResource": false,
+        "Jumping": false,
+        "Timed": false,
+        "ProtectTarget": false,
+        "UndirectedExploration": false,
+        "BulletHell": false,
+        "BuyLowSellHigh": false,
+        "Trading": false,
+        "Shooting": false,
+        "DialogueTree": false,
+        "Building": false,
+        "Race": false
+      },
+      "Views": {
+        "CanSwitchView": false,
+        "TypeOfView": [
+          1
+        ]
+      },
+      "Characters": [
         {
-            "Mechanics": {
-                "AvoidingUnkillableObjects": false,
-                "InstantDeath": false,
-                "GameRepeatsUntilYouDie": false,
-                "RememberAnIncreasingNumberOfThings": false,
-                "RepeatPattern": false,
-                "ForcedConstantMovement": false,
-                "BlockPuzzles": false,
-                "GameKeepsGetsHarderUntilYouDie": false,
-                "UncountableNumberOfPossiblePaths": false,
-                "BlockPath": false,
-                "InformationOverload": false,
-                "SwitchModes": false,
-                "PushMoleDownMolePopsUp": false,
-                "BouncingObject": false,
-                "Gravity": false,
-                "SpinningPlates": false,
-                "Teleports": false,
-                "Squad": false,
-                "ScarceResource": false,
-                "Jumping": false,
-                "Timed": false,
-                "ProtectTarget": false,
-                "UndirectedExploration": false,
-                "BulletHell": false,
-                "BuyLowSellHigh": false,
-                "Trading": false,
-                "Shooting": false,
-                "DialogueTree": false,
-                "Building": false,
-                "Race": false
-            },
-            "Views": {
-                "CanSwitchView": false,
-                "TypeOfView": [
-                    1
-                ]
-            }
+          "hasHealPart": true,
+          "hasManaPart": true,
+          "hasExtraLives": true,
+          "canJump": true,
+          "canBeControlByPlayer": true,
+          "isEnemyForPlayer": true,
+          "size": 2,
+          "characterName": "m"
         },
         {
-            "Mechanics": {
-                "AvoidingUnkillableObjects": false,
-                "InstantDeath": false,
-                "GameRepeatsUntilYouDie": false,
-                "RememberAnIncreasingNumberOfThings": false,
-                "RepeatPattern": false,
-                "ForcedConstantMovement": false,
-                "BlockPuzzles": false,
-                "GameKeepsGetsHarderUntilYouDie": false,
-                "UncountableNumberOfPossiblePaths": false,
-                "BlockPath": false,
-                "InformationOverload": false,
-                "SwitchModes": false,
-                "PushMoleDownMolePopsUp": false,
-                "BouncingObject": false,
-                "Gravity": false,
-                "SpinningPlates": false,
-                "Teleports": false,
-                "Squad": false,
-                "ScarceResource": false,
-                "Jumping": false,
-                "Timed": false,
-                "ProtectTarget": false,
-                "UndirectedExploration": false,
-                "BulletHell": false,
-                "BuyLowSellHigh": false,
-                "Trading": false,
-                "Shooting": false,
-                "DialogueTree": false,
-                "Building": false,
-                "Race": false
-            },
-            "Views": {
-                "CanSwitchView": false,
-                "TypeOfView": [
-                    1
-                ]
-            }
+          "hasHealPart": true,
+          "hasManaPart": true,
+          "hasExtraLives": true,
+          "canJump": true,
+          "canBeControlByPlayer": true,
+          "isEnemyForPlayer": true,
+          "size": 2,
+          "characterName": "n"
         }
-    ]
+      ]
+    },
+    {
+      "Mechanics": {
+        "AvoidingUnkillableObjects": false,
+        "InstantDeath": false,
+        "GameRepeatsUntilYouDie": false,
+        "RememberAnIncreasingNumberOfThings": false,
+        "RepeatPattern": false,
+        "ForcedConstantMovement": false,
+        "BlockPuzzles": false,
+        "GameKeepsGetsHarderUntilYouDie": false,
+        "UncountableNumberOfPossiblePaths": false,
+        "BlockPath": false,
+        "InformationOverload": false,
+        "SwitchModes": false,
+        "PushMoleDownMolePopsUp": false,
+        "BouncingObject": false,
+        "Gravity": false,
+        "SpinningPlates": false,
+        "Teleports": false,
+        "Squad": false,
+        "ScarceResource": false,
+        "Jumping": false,
+        "Timed": false,
+        "ProtectTarget": false,
+        "UndirectedExploration": false,
+        "BulletHell": false,
+        "BuyLowSellHigh": false,
+        "Trading": false,
+        "Shooting": false,
+        "DialogueTree": false,
+        "Building": false,
+        "Race": false
+      },
+      "Views": {
+        "CanSwitchView": false,
+        "TypeOfView": [
+          1
+        ]
+      },
+      "Characters": [
+        {
+          "hasHealPart": true,
+          "hasManaPart": true,
+          "hasExtraLives": true,
+          "canJump": true,
+          "canBeControlByPlayer": true,
+          "isEnemyForPlayer": true,
+          "size": 2,
+		  "characterName": "m"
+        },
+        {
+          "hasHealPart": true,
+          "hasManaPart": true,
+          "hasExtraLives": true,
+          "canJump": true,
+          "canBeControlByPlayer": true,
+          "isEnemyForPlayer": true,
+          "size": 2,
+		  "characterName": "n"
+        }
+      ]
+    }
+  ]
 }
